# Stereopy

./: .gitignore  .readthedocs.yml  AGENTS.md  LICENSE  MANIFEST.in  README.md  Tutorials.md  environment.yml  issue_body.md  pyproject.toml  requirements.txt  requirements_for_image.txt  requirements_for_image_cpu.txt  requirements_for_image_cu11x.txt  requirements_for_image_cu12x.txt  requirements_for_spatialign.txt  setup.py  setup_build.py  setup_configure.py  stereo_test.ipynb
.cursor/rules/: auto-fix-agent.mdc
.cursor/skills/stereopy-issue-responder/: SKILL.md
.cursor/skills/stereopy-maintainer/: SKILL.md
.github/workflows/: auto-create-pr.yml  cpu_pytest_conda.yml  cpu_win_pytest_conda.yml  gpu_pytest_conda.yml  guard-rails.yml  issue-auto-analyze.yml  main.yml  manual.yml  manual_pytest_conda_linux.yml  pytest_conda_linux.yml  pytest_conda_linux_demo.yml  pytest_conda_linux_dev.yml  pytest_conda_linux_gpu.yml  pytest_conda_linux_image.yml  pytest_conda_linux_no_arch.yml  pytest_conda_win.yml  python-app.yml  python-package-conda.yml  trigger-cursor-automation.yml  trigger-cursor-pr-review.yml
config/: glm5_model_registry.json  glm5_stereopy.yaml
docker/: swe_agent.Dockerfile
docs/: 1.2  build.sh  cursor-automation-prompt.md  cursor-pr-review-prompt.md  requirements.txt  roadmap.md  stereo_frame_v0.2.md
docs/source/: conf.py  conf_q.py  contributing.rst  index.rst  release_note.rst  stereo_frame.md
docs/source/General/: API.rst  FAQs.rst  Installation.rst
docs/source/Tutorials/: 3D_Cell_Cell_Communication.ipynb  3D_Gene_Regulatory_Network.ipynb  Annotation.rst  Apply_spaTrack_on_spatial_data_of_Intrahepatic_cholangiocarcinoma_cancer.ipynb  Apply_spaTrack_on_spatial_data_of_axolotl_brain_regeneration_after_injury.ipynb  Apply_spaTrack_to_infer_a_trajectory_on_spatial_transcriptomic_data_from_multiple_time_slices_of_axolotl_brain_regeneration.ipynb  Basic_Workflow.rst  Cases.rst  Cell_Analysis.rst  Demo.ipynb  (+57 more)
docs/source/Tutorials(Multi-Samples)/: Multi_Samples.rst
docs/source/Tutorials(Multi-sample)/: 3D_Reconstruction.ipynb  Batch_Effect.ipynb  Comparative_Analysis.ipynb  MSData_Clustering.ipynb  Multi_sample.rst  ST_Gears.ipynb  Spatial_Alignment.ipynb
scripts/ci/: analyze_issue.py  batch_process_issues.py  batch_swe_agent.sh
spateo/: __init__.py  config.py
spateo/io/: reader.py
spateo/preprocess/: filter.py  normalize.py
spateo/utils/: __init__.py
stereo/: __init__.py  common.py  config.py  constant.py  log_manager.py  stereo_config.py
stereo/algorithm/: __init__.py  _louvain.py  algorithm_base.py  algorithm_err_code.py  batches_integrate.py  cell_correction.py  cell_correction_fast.py  cell_correction_fast_by_mask.py  co_occurence.py  co_occurrence.py  community_detection.py  dendrogram.py  dim_reduce.py  draw_contours.py  gaussian_smooth.py  gen_ccc_micro_envs.py  gen_mesh.py  gen_mesh_3d.py  get_hotspot.py  get_niche.py  highly_variable_genes.py  image_feature.py  inference_regulatory_network.py  leiden.py  log1p_fake.py  louvain.py  mannwhitneyu.py  ms_algorithm_base.py  ms_community_detection.py  ms_log1p_fake.py  ms_spa_track.py  neighbors.py  normalization.py  paga.py  phenograph.py  regulatory_network.py  regulatory_network_test.py  scale.py  scenic.py  score_genes.py  (+9 more)
stereo/core/: __init__.py  base.py  cell.py  constants.py  data.py  data_component.py  external_sort.py  gene.py  ms_data.py  ms_pipeline.py  result.py  ss_data.py  st_pipeline.py  stereo_data.py  stereo_exp_data.py  stereo_result.py  tool_base.py
stereo/image/: __init__.py  pyramid.py
stereo/io/: H5Reader.cpp  H5Reader.h  __init__.py  gef.py  gef_cy.pyx  gef_read.cpp  gef_read.h  gef_read_cy.pyx  h5ad.py  reader.py  util.h  utils.py  writer.py
stereo/plots/: __init__.py  _params_doc.py  clustering.py  decorator.py  dim_reduce.py  interactive_scatter.py  marker_genes.py  ms_plot.py  ms_plot_base.py  paga_plot.py  plot_base.py  plot_batch_qc.py  plot_ccc.py  plot_ccd.py  plot_cells.py  plot_clusters_dot.py  plot_clusters_heatmap.py  plot_clusters_scatter.py  plot_collection.py  plot_coo.py  plot_data_description.md  plot_dendrogram.py  plot_elbow.py  plot_genes_in_pseudotime.py  plot_grn.py  plot_ms_spatial_scatter.py  plot_paga.py  plot_spa_track.py  plot_st_gears.py  plot_time_series.py  plot_utils.py  plots.py  qc.py  scatter.py  violin.py
stereo/preprocess/: __init__.py  filter.py  normalize.py  qc.py  sc_transform.py
stereo/scripts/: ccd.py
stereo/tools/: LR_interaction.py  __init__.py  boundary.py  cell_correct.py  cell_cut.py  cell_segment.py  cell_type_anno.py  cluster.py  cluster_new.py  clustering.py  clustering_o.py  community_detection.py  degs.py  dim_reduce.py  find_markers.py  gem_filter.py  highly_variable_genes.py  rna_velocity.py  rna_velocity.py.backup  spatial_lag.py  spatial_pattern_score.py  tissue_extraction.py  tools.py
stereo/utils/: __init__.py  _download.py  annh5ad2rds.R  correlation.py  data_helper.py  hvg_utils.py  pipeline_utils.py  read_write_utils.py  spmatrix_helper.py  time_consume.py
stereopy/: config.py  log_manager.py
stereopy/preprocess/: normalize.py
stereopy/tools/: cell_type_anno.py
tests/: cell_cluster.py  data_parse.py  environment_gpu.yml  extra_requirements.txt  image_requirements.txt  pytest.ini  settings.py  test_batch_integration.py  test_cell_community_detection.py  test_cell_cut.py  test_cell_type_anno.py  test_clustering.py  test_commit.py  test_data_helper.py  test_dim_reduce.py  test_filter.py  test_find_markers.py  test_generate_scope_key.py  test_gsea.py  test_h5ad_flavor_detection.py  test_h5ad_format.py  test_hvgs.py  test_image_pyramid.py  test_interactive_scatter.ipynb  test_interactive_scatter.py  test_io.py  test_io_h5ms.py  test_issue_351.py  test_issue_384.py  test_marker_genes.py  test_merge_3d_data.py  test_ms_data.py  test_normalize.py  test_plot_cluster_traj.py  test_plot_vec.py  test_plots.py  test_qc.py  test_read_h5ad_layers.py  test_read_stereo_h5ad_layers.py  test_reader.py  (+18 more)
tests/workflows_conf/: environment_linux_py38.yml  environment_linux_py39.yml  environment_win.yml
(+481 files in other folders)
