[build-system]
requires = [
    "setuptools>=69.5.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "stereopy"
description = 'Spatial transcriptomic analysis in python.'
requires-python = ">=3.8"
license = {text = 'MIT License'}
authors = [
    {name = "STOmics", email = "tanliwei@stomics.tech"}
]
keywords = ["stereopy", "stereo"]
readme = 'README.md'
classifiers= [
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Visualization',
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
scvi = [
    "scvi-tools>=1.2.0",
    "anndata==0.9.2",
    "mudata==0.2.3",
    "biopython>=1.83",
    "torchmetrics==0.11.4",
    "scikit-misc==0.1.4",
    "optax==0.1.7",
]

[tool.setuptools.dynamic]
version = {attr = "stereo.common.version"}
dependencies = {file = "requirements.txt"}

[project.scripts]
ccd = "stereo.scripts.ccd:main"

[project.urls]
Homepage = "https://github.com/STOmics/Stereopy"
Documentation = "https://stereopy.readthedocs.io/en/latest/index.html"