[build-system]
requires = [
    "setuptools>=69.5.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "stereopy"
description = 'Spatial transcriptomic analysis in python.'
requires-python = ">=3.10"
license = {text = 'MIT License'}
authors = [
    {name = "STOmics", email = "tanliwei@stomics.tech"}
]
keywords = ["stereopy", "stereo"]
readme = 'README.md'
classifiers= [
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Visualization',
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
scvi = [
    "scvi-tools>=1.2.0",
    "anndata==0.9.2",
    "mudata==0.2.3",
    "biopython>=1.83",
    "torchmetrics==0.11.4",
    "scikit-misc==0.1.4",
    "optax==0.1.7",
    "jax==0.4.30",
    "jaxlib==0.4.30",
    "torch==2.4.1",
]
image = [
    "tensorflow==2.12.0",
    "torch==2.4.1+cpu",
    "torchvision==0.19.1+cpu",
    "albumentations==1.3.1",
    "patchify",
    "fastremap",
    "roifile",
    "onnxruntime",
    "tables"
]
image-cu11 = [
    "tensorflow==2.12.0",
    "torch==2.4.1+cu118",
    "torchvision==0.19.1+cu118",
    "albumentations==1.3.1",
    "patchify",
    "fastremap",
    "roifile",
    "onnxruntime-gpu",
    "tables"
]
image-cu12 = [
    "tensorflow==2.12.0",
    "torch==2.4.1+cu124",
    "torchvision==0.19.1+cu124",
    "albumentations==1.3.1",
    "patchify",
    "fastremap",
    "roifile",
    "onnxruntime-gpu",
    "tables"
]
singler-gpu = ["cusingler"]
spt = [
    "torch==2.4.1+cpu",
    "pysal<=2.6.0",
    "pygam>=0.8.0",
    "quantecon==0.7.2",
    "nbformat",
]
spt-cu11 = [
    "torch==2.4.1+cu118",
    "pysal<=2.6.0",
    "pygam>=0.8.0",
    "quantecon==0.7.2",
    "nbformat",
]
spt-cu12 = [
    "torch==2.4.1+cu124",
    "pysal<=2.6.0",
    "pygam>=0.8.0",
    "quantecon==0.7.2",
    "nbformat",
]
spatialign = [
    "torch==2.4.1+cpu",
    "torch_geometric",
    "torch_cluster",
    "torch_scatter",
    "torch_sparse",
]
spatialign-cu11 = [
    "torch==2.4.1+cu118",
    "torch_geometric",
    "torch_cluster",
    "torch_scatter",
    "torch_sparse",
]
spatialign-cu12 = [
    "torch==2.4.1+cu124",
    "torch_geometric",
    "torch_cluster",
    "torch_scatter",
    "torch_sparse",
]
all = [
    "stereopy[image]",
    "stereopy[spt]",
    "stereopy[spatialign]",
    "stereopy[scvi]"
]
all-cu11 = [
    "stereopy[image-cu11]",
    "stereopy[singler-gpu]",
    "stereopy[spt-cu11]",
    "stereopy[spatialign-cu11]",
    "stereopy[scvi]"
]
all-cu12 = [
    "stereopy[image-cu12]",
    "stereopy[singler-gpu]",
    "stereopy[spt-cu12]",
    "stereopy[spatialign-cu12]",
    "stereopy[scvi]"
]

[tool.setuptools.dynamic]
version = {attr = "stereo.common.version"}
dependencies = {file = "requirements.txt"}

[project.scripts]
ccd = "stereo.scripts.ccd:main"

[project.urls]
Homepage = "https://github.com/STOmics/Stereopy"
Documentation = "https://stereopy.readthedocs.io/en/latest/index.html"